--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://ligheechoagool.com/88/tag.min.js" data-zone="144699" async data-cfasync="false"></script>
   <meta name="monetag" content="d81fb3f9471a82f34f024b3d051164e3">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
